[gd_scene load_steps=3 format=3 uid="uid://tutorial_overlay_001"]

[ext_resource type="Script" path="res://scripts/ui/tutorial_overlay.gd" id="1_tutorial"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.12, 0.18, 0.95)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
content_margin_left = 32.0
content_margin_top = 24.0
content_margin_right = 32.0
content_margin_bottom = 24.0

[node name="TutorialOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tutorial")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="IconLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "ðŸŽ®"
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Willkommen!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TextLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Beschreibungstext hier..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="ProgressLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "1 / 4"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 16

[node name="SkipButton" type="Button" parent="Panel/VBox/HBox"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Ãœberspringen"

[node name="NextButton" type="Button" parent="Panel/VBox/HBox"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Weiter â†’"

